<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Main content wrapped in a vertical LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/createDumpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_dump" />

        <Button
            android:id="@+id/viewDumpsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_existing_dumps"
            android:layout_marginTop="8dp" />

        <ListView
            android:id="@+id/dumpsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/detailsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_placeholder"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <View
            android:id="@+id/colorSwatch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="#000000" />
			
		<Button
			android:id="@+id/writeTagButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/write_dump" />


        <Button
            android:id="@+id/exportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export"
            android:visibility="gone" />
    </LinearLayout>
</FrameLayout>
